# snipped

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
src/: main.rs
src/paste/: mod.rs  parse.rs  target.rs
src/scan/: mod.rs
